docs/lab03-simple-app-deployment/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  selector:
    app: whoami
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
